--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,16 @@
 /*--------------------------------------- General Styles ---------------------------------------*/
+@font-face {
+    font-family: Inter-Bold;
+    src: url("../fonts/static/Inter-Bold.ttf");
+}
+@font-face {
+    font-family: Inter-Regular;
+    src: url("../fonts/static/Inter-Regular.ttf");
+}
+@font-face {
+    font-family: Inter-SemiBold;
+    src: url("../fonts/static/Inter-SemiBold.ttf");
+}
 * {
     margin: 0;
     padding: 0;
@@ -11,20 +23,68 @@
     flex-direction: column;
 }
 /*--------------------------------------- Header Styles ---------------------------------------*/
-header {
-    min-height: 15vh;
-    background-color: blueviolet;
-}
+
 /*--------------------------------------- Main Styles -----------------------------------------*/
 main {
     flex-grow: 1;
-    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #141414;
+}
+main > .row {
+    background-color: #1f1f1f;
+    padding: 30px;
+    border-radius: 12px;
+}
+main > .row > .col {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0 !important;
+}
+main > .row > .col > .img-col > img {
+    width: 90px;
+    object-fit: contain;
+    border-radius: 50%;
+}
+.name-col > h2 {
+    color: white;
+    font-family: Inter-Regular;
+    font-size: 24px;
+    padding-top: 25px;
+}
+.country-col > h5 {
+    color: #c4f82b;
+    font-family: Inter-SemiBold;
+    font-size: 14px;
+}
+.details-col > p {
+    color: #cccccc;
+    font-family: Inter-Regular;
+    font-size: 14px;
+    padding-top: 15px;
+}
+.social-media-col {
+    display: flex;
+    flex-direction: column;
+}
+.social-media-col > button {
+    background-color: #333333;
+    color: white;
+    font-family: Inter-SemiBold;
+    font-size: 14px;
+    border: none;
+    margin: 8px;
+    padding: 12px 95px;
+    border-radius: 8px;
+}
+.social-media-col > button:hover {
+    background-color: #c4f82b;
+    color: #141414;
 }
 /*--------------------------------------- Footer Styles ---------------------------------------*/
-footer {
-    min-height: 5vh;
-    background-color: brown;
-}
 
 /*---------------------------------------------------------------------------------------------*/
 /*--------------------------------------- Media Queries ---------------------------------------*/
